@@ -238,7 +238,7 @@ private:
   PQXX_PURE char const *get_value(size_type row, row_size_type col) const;
   PQXX_PURE bool get_is_null(size_type row, row_size_type col) const;
   PQXX_PURE
-    field_size_type get_length(size_type, row_size_type) const noexcept;
+  field_size_type get_length(size_type, row_size_type) const noexcept;
 
   friend class pqxx::internal::gate::result_creation;
   result(
