@@ -2,6 +2,7 @@
  - Document build in `BUILDING-configure.md` / `BUILDING-cmake.md`.
  - Work around silly clang warning in `test_errorhandler.cxx`.
  - Fix install error with some internal headers. (#322)
+ - Fix "No object selected" error message in large objects.  (#324)
 7.1.1
  - Compile fix for Visual Studio.
  - Warning fix for clang.
